--- a/templates/neuer_name.html
+++ b/templates/neuer_name.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %} {% block inhalt %}
 
+<div class="flex-left">
+  <div class="button">
+    <a href="{{ url_for('index') }}">Zurück</a>
+   
+  </div>
+</div>
+
 <h1>Neuer Name</h1>
 
 <form method="post">
