--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,20 @@
 {% extends 'base.html'%} {% block inhalt %}
 <h1>{{ name }}s Website</h1>
 
+<div class="container">
+  <img
+    class="naruto-bild"
+    src="/static/img/image.png"
+    alt="Narutoo"
+    width="50%"
+  />
+  <div class="center">Helden</div>
+</div>
+
+
 <div class="helden">
   {% for held in helden %}
-  <p>{{held}}</p>
+  <a href="/held?name={{ held }}">{{held}}</a>
   {% endfor %}
 </div>
 
